# Direct

./: CMakeLists.txt  Direct.h  Functions.h  Helpers.h  Shekel.h  convexHull.hpp  main.cpp  tests.cpp
